# surreal-derive

./: .gitignore  Cargo.toml  README.md
src/: attributes.rs  derive_attribute.rs  lib.rs  surreal_derive.rs  surreal_quote.rs  surrealql_machine.rs
tests/: mod.rs
