[package]
name = "surreal_derive_plus"
version = "2.2.2"
edition = "2021"
description = "Query builder for surrealdb"
readme = "README.md"
repository = "https://github.com/dev-logs/surreal-derive"
license = "MIT"
homepage = "https://devlog.studio"
keywords = ["surreal", "surrealdb", "db", "query-builder", "surrealql"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0.38", default-features = false }
quote = { version = "^1.0.33", default-features = false }
proc-macro2 = { version = "^1.0.67", default-features = false }
darling = { version = "^0.20.9", default-features = false }
surreal_devl = "2.2.2"
surrealdb = { version = "^2.2.0", default-features = false }

[dev-dependencies]
surrealdb = { version = "^2.2.0", features = ["kv-mem"] }
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.196"
tokio = "1.42.0"
